# bitcoin-learn

./: .gitignore  Cargo.toml  README.md  config.toml  crypto-play.rb  testnet4.txt  update-op-return-messages
archived/: README.md  get_unspent_ec.rs
notes/: fetch-op-return-image.md  txo-to-satoshi.md
output/: chinese-op-return-messages.txt  fee-span.txt  large-op-return.csv  large-tx.txt  miner-unclaimed.csv  non_standard_txo.txt  ordinals-chinese.csv  ordinals-mime.csv  sighash-none.txt  small-script-sig.csv  special-non-segwit-addresses.txt  witness-text.txt  witness-text2.txt  zero-fee-tx.txt
output/op-return-chinese/: mainnet.csv  mainnet.txt  testnet3.csv  testnet3.txt  testnet4.csv  testnet4.txt
res/: a.avif
src/: bech32.rs  bip38.rs  bip39.rs  bisect_keys.rs  blk-files.rs  blk_files.rs  block_time_interval.rs  brainwallet_db.rs  broadcast_raw.rs  consensus-endianness.rs  demo2.rs  demo3.rs  demo4.rs  deserialize.rs  difficulty.rs  difficulty_ath.rs  fetch_image.rs  fetch_witness.rs  get_unspent.rs  large_op_return.rs  leveldb.rs  lib.rs  mine_genesis.rs  mine_testnet4.rs  miner_unclaimed.rs  mining.rs  my_brainwallet.rs  non_standard_txo.rs  op_return_extract.rs  p2sh.rs  p2sh_redeem_inputs.rs  playground.rs  read-db.rs  read_db.rs  rpc.rs  rpc_demo.rs  satoshi-address.rs  satoshi_address.rs  satoshi_mined_blocks.rs  script_demo.rs  (+15 more)
src/bitcoin_core/: blk_files.rs  leveldb.rs
src/cracking/: script_hash_puzzle.rs
src/ecdsa/: ecdsa.rs
src/inscription/: fetch_image.rs  fetch_witness.rs  search_ordinals.rs  send_op_return_inscription.rs  send_op_return_inscription2.rs
src/mining/: mine_genesis.rs  mine_testnet4.rs
src/protocol/: base58.rs  bech32.rs  bisect_keys.rs  ecdsa.rs  validate.rs
src/searching/: README.md  block_time_interval.rs  difficulty_ath.rs  fee_span.rs  large_op_return.rs  large_tx.rs  match_address.rs  miner_unclaimed.rs  non_standard_txo.rs  satoshi_address.rs  satoshi_mined_blocks.rs  search_op_return.rs  search_sighash_none.rs  search_witness_message.rs  search_witness_message2.rs  small_redeem_inputs.rs
src/segwit/: p2wsh_inscription.rs  send_to_p2wpkh.rs  send_to_p2wsh.rs  spend_p2wpkh.rs  spend_p2wsh.rs  weight.rs  witness_to_total_ratio.rs
src/segwit/taproot/: key_path.rs  p2tr.rs  spend.rs  tweak.rs
src/timelock/: create.rs  spend.rs
src/tools/: my_brainwallet.rs  op_return_read_db.rs  ordinals_read_db.rs  read_db.rs  vanity_address.rs
src/transaction/: tx_double_reward.rs  tx_send.rs  tx_subscriber.rs
