[package]
name = "bitcoin-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin_hashes = "0.14.0"
# rev: 51d503730dbe935c0eb4de30461a34c46e18957d
bitcoin = { path = "/mnt/nvme/open-source/rust-bitcoin/bitcoin", features = ["secp-recovery", "base64"] }
rand = "0.8.5"
#bip38 = "1.1.0"
hex = "0.4.3"
zmq = "0.10.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
#reqwest = "0.11.18"
sha2 = "0.10.7"
digest = "0.10.7"
num-traits = "0.2.16"
num-bigint = "0.4.3"
argon2 = "0.5.1"
blake3 = { version = "1.4.1", features = ["traits-preview", "digest"] }
byteorder = "1.4.3"
#electrum-client = "0.17.0"
anyhow = "1.0.72"
#librocksdb-sys = { version = "0.11.0+8.1.1", default-features = true, optional = true }
#rocksdb = { version = "0.21.0", optional = true }
rayon = "1.7.0"
ripemd = "0.1.3"
#bincode = { version = "2.0.0-rc.3", features = ["derive"] }
#md-5 = "0.10.5"
bitcoincore-rpc = "0.19.0"
hex-literal = "0.4.1"
tiny-bip39 = "2.0.0"
#pbkdf2 = "0.12.2"
#base64 = "0.21.5"
#hmac = "0.12.1"
bitcoin-block-parser = "=0.3.4"
# Until this gets merged: https://github.com/sumopool/bitcoin-block-parser/pull/4
#bitcoin-block-parser = { git = "https://github.com/bczhc/bitcoin-block-parser", branch = "xor-blk" }
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
base64 = "0.22.1"
thread_local = "1.1.8"
num_cpus = "1.16.0"
once_cell = "1.20.2"
fern = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"
humantime = "2.1.0"
yeet-ops = "1.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
bczhc_lib = { git = "https://github.com/bczhc/rust" }
pretty-hex = "0.4.1"
rusqlite = "0.32.1"
#sqlx = { version = "0.8.2", features = ["sqlite", "derive"] }
#bitcoin-leveldb = "0.1.16-alpha.0"
db-key = "=0.0.5"
leveldb = "0.8.6"
bitcoin-varint = "0.1.0"
bitflags = "2.6.0"
csv = "1.3.0"
bech32 = "0.11.0"
clap = { version = "4.5.20", features = ["derive"] }
utf8_iter = "1.0.4"
regex = "1.11.1"
bytesize = "1.3.0"
fxhash = "0.2.1"
figment = { version = "0.10.19", features = ["toml", "env"] }

# TODO: my local workaround for the unreleased versions
[patch.crates-io]
base58ck = { path = "/mnt/nvme/open-source/rust-bitcoin/base58", features = ["alloc"] }
bitcoin-primitives = { path = "/mnt/nvme/open-source/rust-bitcoin/primitives" }
bitcoin_hashes = { path = "/mnt/nvme/open-source/rust-bitcoin/hashes", version = "=0.15.0" }
bitcoin-internals = { path = "/mnt/nvme/open-source/rust-bitcoin/internals" }
bitcoin-units = { path = "/mnt/nvme/open-source/rust-bitcoin/units" }

[[bin]]
name = "fetch-image"
path = "src/inscription/fetch_image.rs"

[[bin]]
name = "tx-subscriber"
path = "src/transaction/tx_subscriber.rs"

[[bin]]
name = "search-sighash-none"
path = "src/searching/search_sighash_none.rs"

[[bin]]
name = "non-standard-txo"
path = "src/searching/non_standard_txo.rs"

[[bin]]
name = "tx-send"
path = "src/transaction/tx_send.rs"

[[bin]]
name = "ecdsa"
path = "src/ecdsa/ecdsa.rs"

[[bin]]
name = "small_redeem_inputs"
path = "src/searching/small_redeem_inputs.rs"

[[bin]]
name = "difficulty"
path = "src/searching/difficulty_ath.rs"

[[bin]]
name = "broadcast-raw"
path = "src/tools/broadcast_raw.rs"

[[bin]]
name = "satoshi-address"
path = "src/searching/satoshi_address.rs"

[[bin]]
name = "bisect-keys"
path = "src/protocol/bisect_keys.rs"

[[bin]]
name = "mine-genesis"
path = "src/mining/mine_genesis.rs"

[[bin]]
name = "satoshi-mined-blocks"
path = "src/searching/satoshi_mined_blocks.rs"

[[bin]]
name = "tx-double-reward"
path = "src/transaction/tx_double_reward.rs"

[[bin]]
name = "consensus-endianness"
path = "src/protocol/consensus_endianness.rs"

[[bin]]
name = "send-to-p2wpkh"
path = "src/segwit/send_to_p2wpkh.rs"

[[bin]]
name = "spend-p2wpkh"
path = "src/segwit/spend_p2wpkh.rs"

[[bin]]
name = "my-brainwallet"
path = "src/tools/my_brainwallet.rs"

[[bin]]
name = "search-op-return"
path = "src/searching/search_op_return.rs"

[[bin]]
name = "op-return-read-db"
path = "src/tools/op_return_read_db.rs"

[[bin]]
name = "ordinals-read-db"
path = "src/tools/ordinals_read_db.rs"

[[bin]]
name = "blk-files"
path = "src/bitcoin_core/blk_files.rs"

[[bin]]
name = "leveldb"
path = "src/bitcoin_core/leveldb.rs"

[[bin]]
name = "timelock-create"
path = "src/timelock/create.rs"

[[bin]]
name = "timelock-spend"
path = "src/timelock/spend.rs"

[[bin]]
name = "miner-unclaimed"
path = "src/searching/miner_unclaimed.rs"

[[bin]]
name = "send-op-return-inscription"
path = "src/inscription/send_op_return_inscription.rs"

[[bin]]
name = "send-op-return-inscription2"
path = "src/inscription/send_op_return_inscription2.rs"

[[bin]]
name = "mine-testnet4"
path = "src/mining/mine_testnet4.rs"

[[bin]]
name = "rpc"
path = "src/tools/rpc.rs"

[[bin]]
name = "block-time-interval"
path = "src/searching/block_time_interval.rs"

[[bin]]
name = "playground"
path = "src/playground.rs"

[[bin]]
name = "bech32"
path = "src/protocol/bech32.rs"

[[bin]]
name = "send_to_p2wsh"
path = "src/segwit/send_to_p2wsh.rs"

[[bin]]
name = "spend-p2wsh"
path = "src/segwit/spend_p2wsh.rs"

[[bin]]
name = "p2wsh-inscription"
path = "src/segwit/p2wsh_inscription.rs"

[[bin]]
name = "fetch-witness"
path = "src/inscription/fetch_witness.rs"

[[bin]]
name = "search-witness"
path = "src/searching/search_witness_message.rs"

[[bin]]
name = "large-op-return"
path = "src/searching/large_op_return.rs"

[[bin]]
name = "script-hash-puzzle"
path = "src/cracking/script_hash_puzzle.rs"

[[bin]]
name = "base58"
path = "src/protocol/base58.rs"

[[bin]]
name = "match_address"
path = "src/searching/match_address.rs"

[[bin]]
name = "validatfe"
path = "src/protocol/validate.rs"

[[bin]]
name = "weight"
path = "src/segwit/weight.rs"

[[bin]]
name = "fee-span"
path = "src/searching/fee_span.rs"

[[bin]]
name = "search-witness-message2"
path = "src/searching/search_witness_message2.rs"

[[bin]]
name = "search-ordinals"
path = "src/inscription/search_ordinals.rs"

[[bin]]
name = "taproot-tweak"
path = "src/segwit/taproot/tweak.rs"

[[bin]]
name = "taproot-spend"
path = "src/segwit/taproot/p2tr.rs"

[[bin]]
name = "vanity-address"
path = "src/tools/vanity_address.rs"

[features]
#default = ["rocksdb"]
#rocksdb = ["dep:librocksdb-sys", "dep:rocksdb"]

[dev-dependencies]
